--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!--Data analyst-->
 <p>Estudiante de ingeniería electromecánica</p>
 <h2 id="portafolio">Portafolio</h2>
-<p>Cálculo de arrollamientos de máquinas ac en python <a href="https://github.com/franlab93/calc">(*)</a></p>
+<p>Cálculo de arrollamientos de máquinas ac en python <a href="https://github.com/franlab93/acw-calc">(*)</a></p>
 <h2 id="educación">Educación</h2>
 <p>Python programmer (<strong>Datacamp</strong>)</p>
 <p>Ingeniería electromecánica (<strong>UM</strong>)</p>
