--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-        <a class="navbar-brand mx-0 mr-sm-auto" href="https://example.com" title="Francisco Labate">
+        <a class="navbar-brand mx-0 mr-sm-auto" href="/" title="Francisco Labate">
           
           Francisco Labate
         </a>
